--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,7 @@
   overflow: hidden;
 }
 
-.page {
-  height: 100%;
-}
-
-.center, .filters-catalog, .page__title-text, .socials, .partners, .description, .offers, .slider__wrapper, .navigation {
+.center, .filters-catalog, .title-text, .socials, .partners, .description, .offers, .slider__wrapper, .navigation {
   max-width: 1160px;
   margin: 0 auto;
   padding: 0 10px;
@@ -736,17 +732,17 @@ a {
   background-color: var(--button-red-hover);
 }
 
-.socials__vk {
+.socials-item__vk {
   width: 27px;
   height: 15px;
 }
 
-.socials__fb {
+.socials-item__fb {
   width: 12px;
   height: 22px;
 }
 
-.socials__inst {
+.socials-item__inst {
   width: 21px;
   height: 21px;
 }
@@ -898,7 +894,7 @@ a {
   width: 259px;
 }
 
-.page__title {
+.title {
   background-color: var(--special-elements);
   text-align: center;
   margin-bottom: 55px;
@@ -908,7 +904,7 @@ a {
   justify-content: center;
 }
 
-.page__title-text {
+.title-text {
   color: var(--text-big);
   font-weight: 500;
   font-size: 55px;
@@ -1226,11 +1222,11 @@ a {
   border-radius: 5px;
 }
 
-.catalog__item:nth-child(2n) {
+.catalog-item:nth-child(2n) {
   margin-right: 0;
 }
 
-.catalog__item {
+.catalog-item {
   width: 360px;
   height: 620px;
   margin-right: 40px;
@@ -1238,7 +1234,7 @@ a {
   position: relative;
 }
 
-.product__img {
+.catalog-item__img {
   width: 358px;
   height: 578px;
   border: 1px solid rgba(var(--black-rgb), 0.1);
@@ -1258,7 +1254,7 @@ a {
   border-radius: 0 0 5px 5px;
 }
 
-.catalog__item:hover .product-details {
+.catalog-item:hover .product-details {
   display: block;
 }
 
@@ -1303,7 +1299,7 @@ a {
   margin: 0 auto;
 }
 
-.browser__bar {
+.catalog-item__bar {
   width: 360px;
   height: 40px;
   background-color: var(--dark-grey);
@@ -1344,7 +1340,7 @@ a {
   right: 23px;
 }
 
-.catalog__item:hover .browser__bar {
+.catalog-item:hover .catalog-item__bar {
   opacity: 1;
 }
 
