--- a/css/style.css
+++ b/css/style.css
@@ -1047,7 +1047,7 @@ a {
   margin-bottom: 20px;
 }
 
-.grid-input__input:not(:checked) + label::before {
+.grid-item__input:not(:checked) + label::before {
   content: "";
   position: absolute;
   top: -2px;
@@ -1061,7 +1061,7 @@ a {
   opacity: 0.4;
 }
 
-.grid-input__input:checked + label::after {
+.grid-item__input:checked + label::after {
   content: "";
   position: absolute;
   top: -2px;
@@ -1123,18 +1123,23 @@ a {
 
 .features-item__input:hover + label::after,
 .features-item__input:hover + label::before,
-.grid-input__input:hover + label::after,
-.grid-input__input:hover + label::before,
-.grid-input__input:focus + label::after,
-.grid-input__input:focus + label::before {
+.grid-item__input:hover + label::after,
+.grid-item__input:hover + label::before {
   opacity: 1;
 }
 
 .features-item__input:disabled + label::after,
 .features-item__input:disabled + label::before,
-.grid-input__input:disabled + label::after,
-.grid-input__input:disabled + label::before {
+.grid-item__input:disabled + label::after,
+.grid-item__input:disabled + label::before {
   opacity: 0.1;
+}
+
+.features-item__input:focus + label::before,
+.features-item__input:focus + label::after,
+.grid-item__input:focus + label::after {
+  border-color: var(--black);
+  opacity: 1;
 }
 
 .filters__button {
