--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,6 @@ a {
 
 .slider-item {
   width: 1160px;
-  padding-top: 59px;
   padding-bottom: 80px;
   display: none;
   position: absolute;
@@ -305,30 +304,37 @@ a {
   font-size: 55px;
   line-height: 55px;
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
   color: var(--accent-color);
+  width: 538px;
+  padding-top: 58px;
 }
 
 .slider-item--smartphone {
-  background-image: url("../img/slide-smartphone.png");
+  background: url("../img/slide-smartphone.png") no-repeat right 2px top -19px;
 }
 
 .slider-item--computer {
-  background-image: url("../img/slide-computer.png");
+  background: url("../img/slide-computer.png") no-repeat right 2px top -19px;
 }
 
 .slider-item--gadget {
-  background-image: url("../img/slide-gadget.png");
+  background: url("../img/slide-gadget.png") no-repeat right 2px top -19px;
 }
 
 .slider-item__text {
   line-height: 24px;
   margin: 0;
   margin-bottom: 38px;
+  width: 416px;
 }
 
 .slider__list .button {
   width: 240px;
+  display: inline-block;
+  vertical-align: middle;
+  padding: 17px 54px 15px 54px;
+  box-sizing: border-box;
 }
 
 .slider-paging {
@@ -1407,6 +1413,45 @@ a {
   mix-blend-mode: normal;
   opacity: 0.3;
   box-shadow: inset 0px 3px 0px var(--shadow-button-filter);
+}
+
+.show-modal {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: scale3d(0.1, 0.1, 1);
+    -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.9);
+  }
+  55% {
+    -webkit-transform: scale3d(1.08, 1.08, 1);
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0);
+  }
+  75% {
+    -webkit-transform: scale3d(0.95, 0.95, 1);
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    -webkit-box-shadow: 0 3px 20px rgba(0, 0, 0, 0.9);
+  }
+}
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  20%, 40%, 60%, 80%, 100% {
+    transform: translateX(-20px);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: translateX(20px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
